# FGS

./: .gitignore  CMakeLists.txt
src/: main.cpp
